--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Game</string>
+    <string name="reset">RESET</string>
+    <string name="play">PLAY</string>
 </resources>
