--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Game</string>
     <string name="reset">RESET</string>
     <string name="play">PLAY</string>
+    <string name="card_left_description">This is the left card</string>
+    <string name="card_middle_description">This is the middle card</string>
+    <string name="card_right_description">This is the right card</string>
 </resources>
